fdo#37960 fix shift+click to select multiple drawings

I simply didn't get the logic behind calling GotoNextFly(). It caused
not only this bug. For example Ctrl+click on a background text frame
did not select the text frame, but an image on the previous page.

Change-Id: I85ccbbda2f324de55417d6199b4abe79e59bf295
Reviewed-on: https://gerrit.libreoffice.org/12132
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>